2004-06-03  Christopher Faylor  <cgf@alum.bu.edu>

	* winbase.h (ilockincr): More changes from the inexplicable world of
	gcc asm magic.
	(ilockdecr): Ditto.

2004-06-03  Christopher Faylor  <me@cgf.cx>

	* winbase.h (ilockincr): YA correction to ensure correct operation with
	no optimization.
	(ilockdecr): Ditto.

2004-06-03  Corinna Vinschen  <corinna@vinschen.de>

	* cygserver.h (CYGWIN_SERVER_VERSION_API): Bump.

2004-06-03  Corinna Vinschen  <corinna@vinschen.de>

	* include/cygwin/ipc.h (IPC_KEY_IS_SHMID): Redefine to a more sensible
	value.

2004-06-02  Christopher Faylor  <cgf@alum.bu.edu>

	* cygheap.cc (cmalloc): Add debugging hook.

2004-06-02  Christophe Jaillet  <christophe.jaillet@wanadoo.fr>

	* spawn.cc (find_exec): Use has_slash to determine if path has a slash
	rather than calculating this twice.

2004-05-30  Pierre Humblet <pierre.humblet@ieee.org>

	* path.cc (mount_info::add_item): Make sure native path has drive
	or UNC form. Call normalize_xxx_path instead of [back]slashify.
	Remove test for double slashes. Reorganize to always debug_print.

2004-05-28  Pierre Humblet  <Pierre.Humblet@ieee.org>

	* fhandler_disk_file.cc (fhandler_disk_file::fchmod): Only try to open
	the file if it uses an acl.

2004-05-28  Pierre Humblet  <Pierre.Humblet@ieee.org>

	* path.cc (chdir): Always use the normalized_path as posix_cwd, except
	if it starts with a drive.

2004-05-25  Christopher Faylor  <cgf@alum.bu.edu>

	* winbase.h: Semi-revert previous patch as it caused strange behavior.
	Use syntax similar to that recommended in mingw-dvlpr.

2004-05-25  Christopher Faylor  <cgf@alum.bu.edu>

	* include/cygwin/version.h: Bump DLL minor number to 11.

2004-05-25  Christopher Faylor  <cgf@alum.bu.edu>

	* winbase.h: Add proper attributions for memory operands throughout.

2004-05-24  Christopher Faylor  <cgf@alum.bu.edu>

	* include/cygwin/version.h: Bump api minor version number.

2004-05-24  Christopher Faylor  <cgf@alum.bu.edu>

	* cygwin.din: Export atoll.
